[package]
name = "tsunami"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cargo-fuzz = "0.12.0"
criterion = "0.5.1"
crossbeam = "0.8.4"
dashmap = "5.5.3"
futures = "0.3.30"
hashbrown = "0.13"
proptest = "1.4.0"
zerocopy = "0.8.0-alpha"
zerocopy-derive = "0.8.0-alpha"
